changes to path

--- a/pages/aboutme.html
+++ b/pages/aboutme.html
@@ -16,12 +16,12 @@
 
 <body>
     <header>
-        <h1><a href="./index.html" id="my-name">Renee Valentine</a></h1>
+        <h1><a href="/index.html" id="my-name">Renee Valentine</a></h1>
         <h5 id="blurb">(Soon to Be) Fullstack Engineer</h5>
         <nav>
-            <a href="./index.html">Home</a>
-            <a href="./pages/aboutme.html">About Me</a>
-            <a href="./pages/aboutyou.html">About You</a>
+            <a href="/index.html">Home</a>
+            <a href="./aboutme.html">About Me</a>
+            <a href="./aboutyou.html">About You</a>
         </nav>
     </header>
     <main id="top-of-page">
