update home page

--- a/index.html
+++ b/index.html
@@ -29,10 +29,7 @@
             <img src="./FGS_Renee-Valentine_151_v03-bw.jpg" alt="A picture of Renee Valentine">
         </media>
         <br><br>
-        <p id="intro">Hey, Everyone. My name's Renee, I'm so excited to be your new classmate, and I'm so proud of us
-            all for
-            getting here today. If you want to learn more information about me, click <a href="./pages/aboutme.html">here</a>.
-            Or click the "About Me" link in the Navigation bar. </p>
+        <p id="intro">Hey, Everyone. My name is Renee. Thank you so much for taking the time to know more about me</p>
     </main>
     <br><br>
     <footer>
