--- a/aboutme.html
+++ b/aboutme.html
@@ -29,7 +29,7 @@
             <h2>About Me</h2>
             <h3>Hey, I'm Renee!</h3>
             <p>
-                My full name is ReneeJoy Valentine, but you can call me Renee (they/them). Some basic facts about me are
+                My full name is Renee Valentine, but you can call me Renee (they/them). Some basic facts about me are
                 that I'm
                 27, my favorite color is blue, my favorite flower is a Sunflower, and I'm a Capricorn for anyone that's
                 into that sort of thing.
@@ -42,9 +42,9 @@
                 However, today I think tech is the perfect place for me to be as a creative. Technology, much like art,
                 is at the
                 forefront of creativity and innovation. Sure, the George Orwells and H.G. Wells of the world dreamt of
-                hoverboards and self-driving cars, but software engineers, and engineers alike, made those prophecies a
-                reality. I'm hoping through what I learn from Per Scholas, I'll eventually have a chance to make my own
-                innovative and creative, dream come true. </p>
+                hoverboards and self-driving cars, but software engineers, and engineers alike, made those dreams a
+                reality. </p>
+            <p>A someone who is interested in Film, TV, and most of all visual arts, these interests of mine inform the projects I create. For example, Moodie, a movie and TV listing application, that returns movie suggestions based on your unique personality. To view the code, just go here <a href=""></a></p>
         </section>
         <section id="favorite-things">
             <h2>A Few of My Favorite Things</h2>
