--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 <body>
     <header>
         <h1><a href="./index.html" id="my-name">Renee Valentine</a></h1>
-        <h5 id="blurb">(Soon to Be) Fullstack Engineer</h5>
+        <h5 id="blurb">Software Engineer</h5>
         <nav>
             <a href="./index.html">Home</a>
             <a href="./aboutme.html">About Me</a>
